--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libmeegotouch (0.21.6~1) unstable; urgency=low
+
+  * unreleased
+
+ -- Adrian Yanes <ext-adrian.yanes@nokia.com>  Wed, 13 Apr 2011 12:26:01 +0300
+
 libmeegotouch (0.21.5-1) unstable; urgency=low
 
   * New version
