--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+libmeegotouch (0.21.6-2) unstable; urgency=low
+
+  * New version
+  * Fixes: NB#247480 - MSheet can appear empty if the central widget is changed.
+
+ -- Adrian Yanes <ext-adrian.yanes@nokia.com>  Tue, 19 Apr 2011 13:02:50 +0300
+
 libmeegotouch (0.21.6-1) unstable; urgency=low
 
   * New version
