--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,27 @@
-libmeegotouch (0.21.7~1) unstable; urgency=low
+libmeegotouch (0.21.7-1) unstable; urgency=low
 
-  * unreleased
+  * New version
+  * Fixes: NB#248157 - Rotating a group list view allocates wrong size for the cells
+  * Fixes: NB#248398 - List does not refresh all items when layout has changed.
+  * Fixes: NB#241217 - Startup wizard language not in SIM language
+  * Fixes: NB#248584 - Disable mirroring in Arabic build causes incomplete mirroring effect in bidirectional text.
+  * Fixes: NB#242043 - Pre-edited text is getting deleted when trying to insert a copied text inside in the rich text (multi line) field.
+  * Fixes: NB#238652 Label incorrectly wordwrapped when wordwrapping and eliding
+  * Fixes: NB#248110 - disabling elide mode for MLabel does not change appearance
+  * Fixes: NB#244040 - [REG] Page content disappears after toggling orientation and navigating to prev/next view.
+  * Fixes: NB#246549 - Gallery: The month in Date and time medium (Gregorian Calendar) doesnt start with capitals in Portuguese
+  * Fixes: NB#246066 - Calculator; no thousands separator on the values
+  * Fixes: NB#221330 - Untranslated strings are observed in the Style settings dialog.
+  * Fixes: NB#243142
+  * Fixes: NB#240802 - [TASK] Text edit prompt : fade out/in transition when focus in/out
+  * Fixes: NB#245942 - setOrientationAngle leaks memory
+  * Fixes: NB#240787 - [TASK] Clipboard is cleared after successful pasting text from copying/pasting widget
+  * Fixes: NB#247308 - libmeegotouch uses Session.State when it only needs Screen.Blanked
+  * Fixes: NB#247480 - MSheet can appear empty if the central widget is changed.
+  * Fixes: NB#247564 - Recognition of multitouch gestures getting in the way of normal gestures
+  * Fixes: NB#245091 - Add call to QMeeGoGraphicsSystemHelper::enableSwitchEvents() to enable QMeeGoSwitchEvents
 
- -- Adrian Yanes <ext-adrian.yanes@nokia.com>  Thu, 14 Apr 2011 16:46:14 +0300
+ -- Adrian Yanes <ext-adrian.yanes@nokia.com>  Wed, 20 Apr 2011 14:20:52 +0300
 
 libmeegotouch (0.21.6-1) unstable; urgency=low
 
