--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libmeegotouch (0.21.8~1) unstable; urgency=low
+
+  * unreleased
+
+ -- Adrian Yanes <ext-adrian.yanes@nokia.com>  Thu, 21 Apr 2011 13:58:23 +0300
+
 libmeegotouch (0.21.7-1) unstable; urgency=low
 
   * New version
