--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ libmeegotouch (0.21.8~1) unstable; urgency=low
 
   * unreleased
   * Fixes: NB#243544 - Out of process application extension sockets should be moved to /var/run
+  * Fixes: NB#242852 - in a long note, when focus is inserted to middle you cannot pan down
 
  -- Adrian Yanes <ext-adrian.yanes@nokia.com>  Thu, 21 Apr 2011 13:58:23 +0300
 
