--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libmeegotouch (0.21.9~1) unstable; urgency=low
+
+  * unreleased
+
+ -- Adrian Yanes <ext-adrian.yanes@nokia.com>  Tue, 26 Apr 2011 18:03:29 +0300
+
 libmeegotouch (0.21.8-1) unstable; urgency=low
 
   * New version
