--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,18 @@
-libmeegotouch (0.21.9~1) unstable; urgency=low
+libmeegotouch (0.21.9-1) unstable; urgency=low
 
-  * unreleased
+  * New version
+  * Fixes: NB#249745 -[TASK] Optimize emission of MOrientationChangeEvent
+  * Fixes: NB#249480 - MProgressIndicator with unknown duration keeps spinning when hidden
+  * Fixes: NB#248658 - MPhysics2dPanning: Panning is restarted when a very still finger is lifted
+  * Fixes: NB#247795 - [TASK] Legal bug in libmeegotouch
+  * Fixes: NB#249062 - There is no animation if dialog is deleted after exec()
+  * Fixes: NB#247164 - Fast scroll updates.
+  * Fixes: NB#246600 - [TASK] Date is not displayed correctly when language is sent to english and region to russia
+  * Fixes: NB#241236 - After copying a particular music album to the device 3 albums are shown in Music, some songs are missing
+  * Fixes: NB#250390 - [REG] Collection toolbar menu item is displaying on the top of the screen for the given scenario
+  * Fixes: NB#247292 - Cancel and Done buttons spacing not proper in the sheet landscape mode
 
- -- Adrian Yanes <ext-adrian.yanes@nokia.com>  Tue, 26 Apr 2011 18:03:29 +0300
+ -- Adrian Yanes <ext-adrian.yanes@nokia.com>  Thu, 28 Apr 2011 14:55:11 +0300
 
 libmeegotouch (0.21.8-1) unstable; urgency=low
 
