--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libmeegotouch (0.21.11~1) unstable; urgency=low
+
+  * unreleased
+
+ -- Adrian Yanes <ext-adrian.yanes@nokia.com>  Tue, 03 May 2011 09:29:20 +0300
+
 libmeegotouch (0.21.10-1) unstable; urgency=low
 
   * New version
