--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,19 @@
-libmeegotouch (0.21.11~1) unstable; urgency=low
+libmeegotouch (0.21.11-1) unstable; urgency=low
 
-  * unreleased
+  * New version
+  * Fixes: NB#243647 - Text inside MMS bubble containing long text is cropped from top
+  * Fixes: NB#251133 - MFileDataStore doesn't allow setting multiple values without sync
+  * Fixes: NB#241875, Unable to enter text in field
+  * Fixes: Selecting text and releasing outside text edit caused focus lost.
+  * Fixes: Show paste on first click on text edit after focus.
+  * Fixes: Prevent mouse interaction with text edit upon first focusing tap.
+  * Fixes: NB#247715, Background color of MCompleter is changed in certain use case
+  * Fixes: NB#247080 - Tapping disabled text input field, shows "paste" command... although user cannot write anything to this field
+  * Fixes: NB#248439 - Date Format; Date Format in region Hong Kong (Traditional Chinese) is wrong.
+  * Fixes: NB#249631 - Spinner is not animating after page switch
+  * Fixes: NB#249777 - <MemLeak> Memory leak in mtapandholdrecognizer.cpp ,mwidgetview.cpp
 
- -- Adrian Yanes <ext-adrian.yanes@nokia.com>  Tue, 03 May 2011 09:29:20 +0300
+ -- Adrian Yanes <ext-adrian.yanes@nokia.com>  Tue, 03 May 2011 15:38:22 +0300
 
 libmeegotouch (0.21.10-1) unstable; urgency=low
 
