--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libmeegotouch (0.21.12-1) unstable; urgency=low
+
+  * unreleased
+
+ -- Adrian Yanes <ext-adrian.yanes@nokia.com>  Tue, 03 May 2011 15:42:21 +0300
+
 libmeegotouch (0.21.11-1) unstable; urgency=low
 
   * New version
