--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libmeegotouch (0.21.14~1) unstable; urgency=low
+
+  * unreleased
+
+ -- Adrian Yanes <ext-adrian.yanes@nokia.com>  Mon, 09 May 2011 15:37:53 +0300
+
 libmeegotouch (0.21.13-1) unstable; urgency=low
 
   * New version
