--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+libmeegotouch (0.21.12-2) unstable; urgency=low
+
+  * New version
+  * Fixes: NB#252511 - Crash in list index when container scene window is null.
+  * Fixes: NB#252583 - navigation bar appears in landscape in portrait-locked window
+
+ -- Adrian Yanes <ext-adrian.yanes@nokia.com>  Mon, 09 May 2011 16:35:59 +0300
+
 libmeegotouch (0.21.12-1) unstable; urgency=low
 
   * New version
