--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libmeegotouch (0.21.15~1) unstable; urgency=low
+
+  * unreleased
+
+ -- Adrian Yanes <ext-adrian.yanes@nokia.com>  Wed, 11 May 2011 17:02:36 +0300
+
 libmeegotouch (0.21.14-1) unstable; urgency=low
 
   * New version
