Changes: Updating debian/changelog
RevBy: TrustMe
Details: Commit 3cfda678b10979212369f4016b1ede1b553e7aa3
"Changes: New styling for the view and object menus"
fixes that "bug"

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 libmeegotouch (0.21.15~1) unstable; urgency=low
 
   * unreleased
+  * Fixes: NB#248136 - [TASK] New View/Action/Object Menu
 
  -- Adrian Yanes <ext-adrian.yanes@nokia.com>  Wed, 11 May 2011 17:02:36 +0300
 
