--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libmeegotouch (0.99.0~1) unstable; urgency=low
+
+  * [unreleased]
+
+ -- Daniel d'Andrada <daniel.dandrada@nokia.com>  Mon, 16 May 2011 09:35:49 +0300
+
 libmeegotouch (0.21.15-1) unstable; urgency=low
 
   * New version
